feature: udpate refactor code